--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       </tr>
     </table>
     <p>
-      I am a Tech-Enthusiast and a cybersecurity and web devoloper <br />Who wants to persue learning alot more about the web devolopment and Artifical interligent
+      I am a Tech-Enthusiast and a cybersecurity and web devoloper <br />Who wants to persue learning alot more about the web devolopment and Artifical intelligence
       and go ahead and change the world !
   </p>
 <hr />
 <h3>EDUCATION</h3>
 <p>
-  I am a Student At SRM University, and I am Proficient in Programming in C,C++ ,Java ,Python,C#,good at<br /> Web Development, Data analysis, Management.
+  I am a Student At SRM University,I have Proficiency in Programming in C,C++ ,Java ,Python,C#,good at<br /> Web Development, Data analysis,Data Management.
 
 </p>
 <P>
@@ -148,7 +148,7 @@
 <table cellspacing="10" cellpadding="10" >
   <tr>
     <td>
-      Mechine Learning
+      Machine Learning
       </td>
       <td>
         🌟🌟🌟
@@ -157,7 +157,7 @@
     <tr>
 
       <td>
-        Deep learing
+        Deep Learning
         </td>
         <td>
           🌟🌟🌟
@@ -165,7 +165,7 @@
       </tr>
       <tr>
         <td>
-          python With lib
+          python With Libraries
           </td>
           <td>
             🌟🌟🌟🌟
