--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </tr>
     </table>
     <p>
-      I am a Tech-Enthusiast and a cybersecurity and web devoloper <br />Who wants to persue learning alot more about the web devolopment and Artifical intelligence
+      I am a Tech-Enthusiast and a cybersecurity and web devoloper <br />Who wants to pursue learning alot more about the web devolopment and Artifical intelligence
       and go ahead and change the world !
   </p>
 <hr />
@@ -32,7 +32,7 @@
   <li><b>The Millennium High School Dubai</b>-2001-2002</li>
   <li><b>The Kindergarden Starters-</b>2002-2006</li>
   <li><b>The Delhi Private School Sharjah</b>-2007-2010</li>
-  <li><b>RBK school</b>-2011-2015</li>
+  <li><b>RBK School</b>-2011-2015</li>
   <li><b>RAO IIT Mumbai</b>-2015-2017</li>
   <li><b>SRM University,Chennai</b>-2017-2021</li>
 </l>
