--- a/index.html
+++ b/index.html
@@ -2,197 +2,58 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>😎 Ashitosh personal site</title>
-<link rel="stylesheet" href="css/styles.css">
-</head>
+    <title>Ashitosh Gupta</title>
+    <link rel="stylesheet" href="css/styles.css">
+<link rel="icon" href="favicon.ico">
+<link href="https://fonts.googleapis.com/css?family=Merriweather|Nanum+Gothic|Sacramento" rel="stylesheet">
+  </head>
   <body>
-    <table cellspacing="20"  cellpadding="20">
-      <tr>
-        <td><img src="ashitosh.jpg" /><br />
-        <td>  <h1>ASHITOSH GUPTA 😎 </h1>
-          <p>
-            <em><strong>Developer and AI enthusiasts</strong></em><br />
-
-            <em>studying in <strong>SRM University Chennai</strong></em>
-          </p></td>
-      </tr>
-    </table>
+<div class="top">
+  <img class="t-cloud" src="images/cloud.png" >
+  <h1><em>I'm Ashitosh.</em></h1>
+  <h3 class="a">a Developer</h3>
+    <img class="b-cloud" src="images/cloud.png" >
+<img src="images/mountain.png" />
+</div>
+<div class="middle-container">
+  <div class="profile">
+    <img class="dp"src="ashitosh.jpg" alt="profile">
+    <h2>Hello.</h2>
     <p>
-      I am a Tech-Enthusiast and a cybersecurity and web devoloper <br />Who wants to pursue learning alot more about the web devolopment and Artifical intelligence
+    <b>I am a Tech-Enthusiast and web devoloper <br />Who wants to persue learning alot more about the web devolopment and Artifical interligent
       and go ahead and change the world !
-  </p>
-<hr />
-<h3>EDUCATION</h3>
-<p>
-  I am a Student At SRM University,I have Proficiency in Programming in C,C++ ,Java ,Python,C#,good at<br /> Web Development, Data analysis,Data Management.
+  </b></p>
+  </div>
+  <hr>
+  <div class="skills">
+    <h2>My Skills.</h2>
+    <div class="skill-row">
+      <img class="wd" src="images/webdesgin.png" alt="">
+      <h3>web Design & Development</h3>
+      <p><b>My goal is to Design and Develop webpages which can run on any platform, conveying the message your want to send.</b></p>
+    </div>
+    <div class="skill-row">
+      <img class="d" src="images/data.png" alt="">
+      <h3>Data Analyst</h3>
+      <p><b>I specifically process of inspecting, cleansing, transforming, and modeling data with the goal of discovering useful information, informing conclusions, and supporting decision-making.</b></p>
+    </div>
+  </div>
+  <hr>
+  <div class="contact-me">
+    <h2 style="color:#66BFBF;font-size:50px;">Get In Touch</h2>
+    <h3>I can design what you want and Develop what you need!.</h3>
+    <p style="font-size:20px;color:grey;margin:50px auto;">For this and lot more, you can get in touch down below.</p>
+    <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+  </div>
+</div>
 
-</p>
-<P>
-  <ul>
-  <li><b>The Millennium High School Dubai</b>-2001-2002</li>
-  <li><b>The Kindergarden Starters-</b>2002-2006</li>
-  <li><b>The Delhi Private School Sharjah</b>-2007-2010</li>
-  <li><b>RBK School</b>-2011-2015</li>
-  <li><b>RAO IIT Mumbai</b>-2015-2017</li>
-  <li><b>SRM University,Chennai</b>-2017-2021</li>
-</l>
-</P>
 
-<a href="hobbies.html">My Hobbies</a>
-<hr />
-<h2>Experience</h2>
-<p>
-  <ul>
-    <li>
-      <strong>Web Devoloper</strong><br />
-      TECHNO WORLD.PVT
-      present-Jan 2019
-    </li>
-  </ul>
-</p>
-<hr />
-<h2>Certification</h2>
-<p>
-  <ul>
-    <LI>
-      Ethical Hacking Certification-Udemy
-    </LI>
-    <li>
-        Full-Stack Web Devoloper Certification-Udemy
-    </li>
-  </ul>
-</p>
-<hr />
-<h2>skills</h2>
-<table>
+<div class="bottom-container">
+  <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+  <a class="footer-link" href="https://twitter.com/">Twitter</a>
+  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  <p class="copyright">© 2019 ASHITOSH ARUN GUPTA.</p>
+</div>
 
-<tr>
-
-<td>
-<table cellspacing="10" cellpadding="10">
-  <tr><strong>SkillSet</strong></td>
-    <td>
-
-      </td>
-  </tr>
-  <tr>
-    <td>
-      Java
-    </td>
-    <td>
-      🌟🌟🌟🌟🌟
-      </td>
-  </tr>
-  <tr>
-    <td>
-      C++
-    </td>
-    <td>
-      🌟🌟🌟🌟🌟
-      </td>
-  </tr>
-  <tr>
-
-    <td>
-      c
-    </td>
-    <td>
-      🌟🌟🌟🌟🌟
-      </td>
-  </tr>
-  <tr>
-    <td>
-      python
-    </td>
-    <td>
-      🌟🌟🌟🌟
-      </td>
-  </tr>
-  <tr>
-    <td>
-      Java Frameworks
-    </td>
-    <td>
-        🌟🌟🌟🌟🌟
-      </td>
-  </tr>
-  <tr>
-    <td>
-      html
-    </td>
-    <td>
-      🌟🌟🌟🌟
-      </td>
-  </tr>
-  <tr>
-    <td>
-      Css
-      </td>
-      <td>
-        🌟🌟🌟🌟
-        </td>
-  </tr>
-
-  <tr>
-    <td>
-      Asp.net Famework
-    </td>
-    <td>
-      🌟🌟🌟🌟
-      </td>
-  </tr>
-
-</table>
-</td>
-<td>
-<table cellspacing="10" cellpadding="10" >
-  <tr>
-    <td>
-      Machine Learning
-      </td>
-      <td>
-        🌟🌟🌟
-        </td>
-    </tr>
-    <tr>
-
-      <td>
-        Deep Learning
-        </td>
-        <td>
-          🌟🌟🌟
-          </td>
-      </tr>
-      <tr>
-        <td>
-          python With Libraries
-          </td>
-          <td>
-            🌟🌟🌟🌟
-            </td>
-        </tr>
-        <tr>
-          <td>
-           Analysing Data
-            </td>
-            <td>
-              🌟🌟🌟🌟
-              </td>
-          </tr>
-          <tr>
-            <td>
-              Visualization
-              </td>
-              <td>
-                🌟🌟🌟🌟
-                </td>
-            </tr>
-
-  </table>
-  </td>
-  </tr>
-  </table>
-  <hr />
-<a href="contact.html"><h2>Contact Me</h2>:</a>
   </body>
 </html>
